--- a/src/components/PostList.astro
+++ b/src/components/PostList.astro
@@ -4,17 +4,18 @@ import { type CollectionEntry } from 'astro:content';
 import PostItem from './PostItem.astro';
 
 interface Props {
+	header?: 'h2' | 'h3';
 	posts: CollectionEntry<'blog'>[];
 }
 
-const { posts } = Astro.props;
+const { header = 'h2', posts } = Astro.props;
 ---
 
 <ul class="grid gap-10 md:grid-cols-2 lg:grid-cols-3">
 	{
 		posts.map((post) => (
 			<li>
-				<PostItem {...post} />
+				<PostItem {...post} header={header} />
 			</li>
 		))
 	}
