--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -61,7 +61,7 @@ const posts = (await getCollection('blog'))
 				</a>
 			</h2>
 		</Prose>
-		<PostList posts={posts} />
+		<PostList header="h3" posts={posts} />
 		<a
 			class="text-base font-light mt-10 block text-violet-500 hover:text-violet-400 transition-colors underline lg:hidden"
 			href="/blog">Read more&hellip;</a
