--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@ const year = new Date().getFullYear();
 ---
 
 <footer
-	aria-label="Site footer"
+	aria-label={`${SITE_TITLE}, ${year}`}
 	class="bg-black px-10"
 	itemprop="copyrightNotice"
 >
