--- a/src/components/FormattedDate.astro
+++ b/src/components/FormattedDate.astro
@@ -4,18 +4,14 @@ interface Props {
 }
 
 const { date } = Astro.props;
+
+const formattedDate = date.toLocaleDateString('en-us', {
+	day: 'numeric',
+	month: 'short',
+	year: 'numeric',
+});
 ---
 
-<time
-	aria-label="Publish date"
-	datetime={date.toISOString()}
-	itemprop="datePublished"
->
-	{
-		date.toLocaleDateString('en-us', {
-			day: 'numeric',
-			month: 'short',
-			year: 'numeric',
-		})
-	}
+<time datetime={date.toISOString()} itemprop="datePublished">
+	{formattedDate}
 </time>
