--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -1,16 +1,22 @@
 ---
 import type { HTMLAttributes } from 'astro/types';
 
-type Props = HTMLAttributes<'a'>;
+type Props = { text: string } & HTMLAttributes<'a'>;
 
-const { class: className, href, ...props } = Astro.props;
+const { class: className, href, text, ...props } = Astro.props;
 const pathname = Astro.url.pathname.replace(import.meta.env.BASE_URL, '');
 const subpath = pathname.match(/[^/]+/g);
 const isActive = href === pathname || href === '/' + (subpath?.[0] || '');
 ---
 
 <li class="text-xl font-light hover:text-violet-400 transition-colors">
-	<a class:list={[className, { active: isActive }]} href={href} {...props}>
+	<a
+		class:list={[className, { active: isActive }]}
+		href={href}
+		{...props}
+		aria-label={text}
+	>
+		{text}
 		<slot />
 	</a>
 </li>
