--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -22,6 +22,7 @@ const { description, image = '/blog-placeholder-1.jpg', title } = Astro.props;
 <meta content="width=device-width,initial-scale=1" name="viewport" />
 <link href="/favicon.svg" rel="icon" type="image/svg+xml" />
 <meta content={Astro.generator} name="generator" />
+<link href="/sitemap-index.xml" rel="sitemap" />
 
 <!-- Font preloads -->
 <link
