feat: add prettier-plugin-tailwindcss and update component styles for consistency

--- a/src/components/Audio.astro
+++ b/src/components/Audio.astro
@@ -16,5 +16,5 @@ const { caption, src } = Astro.props;
 			srclang="en"
 		/>
 	</audio>
-	{caption && <figcaption class="text-sm text-center">{caption}</figcaption>}
+	{caption && <figcaption class="text-center text-sm">{caption}</figcaption>}
 </figure>
