--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -15,7 +15,7 @@ const { class: className } = Astro.props;
 	class:list={['bg-black px-10', className]}
 	itemprop="copyrightNotice"
 >
-	<div class="font-light max-w-screen-2xl mx-auto py-10">
+	<div class="mx-auto max-w-screen-2xl py-10 font-light">
 		{SITE_TITLE}, {year}
 	</div>
 	<section
