--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -9,7 +9,7 @@ const subpath = pathname.match(/[^/]+/g);
 const isActive = href === pathname || href === '/' + (subpath?.[0] || '');
 ---
 
-<li class="text-xl font-light hover:text-violet-300 transition-colors">
+<li class="text-xl font-light transition-colors hover:text-violet-300">
 	<a
 		class:list={[className, { active: isActive }]}
 		href={href}
