--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,18 +12,18 @@ const { class: className } = Astro.props;
 
 <header class:list={['bg-black px-10', className]}>
 	<nav
-		class="flex flex-col sm:flex-row gap-4 items-center justify-between max-w-screen-2xl mx-auto py-10"
+		class="mx-auto flex max-w-screen-2xl flex-col items-center justify-between gap-4 py-10 sm:flex-row"
 	>
 		<div
-			class="text-center sm:text-left hover:text-violet-300 transition-colors"
+			class="text-center transition-colors hover:text-violet-300 sm:text-left"
 		>
 			<a href="/">
-				<h2 aria-label={SITE_TITLE} class="text-2xl mb-2">
+				<h2 aria-label={SITE_TITLE} class="mb-2 text-2xl">
 					{SITE_TITLE}
 				</h2>
 				<h3
 					aria-label={SITE_DESCRIPTION}
-					class="italic font-light text-base"
+					class="text-base font-light italic"
 				>
 					{SITE_DESCRIPTION}
 				</h3>
