--- a/src/components/PostItem.astro
+++ b/src/components/PostItem.astro
@@ -35,12 +35,12 @@ const id = `post-${post.id}`;
 				wrapperClass="rounded-md overflow-hidden"
 			/>
 		) : (
-			<div class="w-full h-80 rounded-md image-filter" data-hash={hash} />
+			<div class="image-filter h-80 w-full rounded-md" data-hash={hash} />
 		)
 	}
 	<Header
 		aria-label={title}
-		class="font-thin text-3xl my-4"
+		class="my-4 text-3xl font-thin"
 		id={id}
 		itemprop="headline"
 	>
