--- a/src/components/PostMeta.astro
+++ b/src/components/PostMeta.astro
@@ -9,18 +9,18 @@ interface Props {
 const { categories, date } = Astro.props;
 ---
 
-<div class="font-light text-base mt-4 mb-10 flex flex-col sm:flex-row sm:gap-1">
+<div class="mt-4 mb-10 flex flex-col text-base font-light sm:flex-row sm:gap-1">
 	<FormattedDate date={date} />
 	{
 		categories.length > 0 && (
 			<>
 				<span class="hidden sm:block">&ndash; </span>
 				Filed under:
-				<ul class="m-0 p-0 ps-0 list-none sm:flex gap-1">
+				<ul class="m-0 list-none gap-1 p-0 ps-0 sm:flex">
 					{categories.map((category) => (
 						<li
 							aria-label={category}
-							class="sm:after:content-[','] last:mr-0 last:after:content-none m-0 p-0 sm:mr-1 flex flex-wrap"
+							class="m-0 flex flex-wrap p-0 last:mr-0 last:after:content-none sm:mr-1 sm:after:content-[',']"
 							itemprop="keywords"
 							itemscope
 							itemtype="http://schema.org/DefinedTerm"
