--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -22,7 +22,7 @@ const hash = coverImage ? await getThumbhash(coverImage) : '';
 		coverImage && (
 			<Image
 				alt={coverAlt ?? ''}
-				class="object-cover object-center w-screen min-w-80"
+				class="w-screen min-w-80 object-cover object-center"
 				hash={hash}
 				layout="full-width"
 				loading="eager"
@@ -34,7 +34,7 @@ const hash = coverImage ? await getThumbhash(coverImage) : '';
 	<Prose
 		as="article"
 		class:list={[
-			'bg-black p-10 rounded-md mb-10',
+			'mb-10 rounded-md bg-black p-10',
 			coverImage && 'mt-[20vh]',
 		]}
 		itemprop="articleBody"
