feat: enhance layout and styling with new 404 page, updated global styles, and improved component classes

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -31,7 +31,9 @@ if (propTitle) {
 	<head>
 		<BaseHead description={description} title={title} />
 	</head>
-	<body class="flex flex-col bg-black font-serif text-lg text-white">
+	<body
+		class="flex flex-col bg-black font-serif font-weight-normal text-lg text-white"
+	>
 		<main
 			{...attributes}
 			class:list={['order-2 mx-auto px-10 xl:max-w-screen-xl', className]}
