--- a/src/components/Prose.astro
+++ b/src/components/Prose.astro
@@ -9,8 +9,9 @@ const { as: Component = 'article', class: className } = Astro.props;
 
 <Component
 	class:list={[
+		'max-w-[65ch]',
 		'prose prose-invert prose-violet prose-xl prose-stone mx-auto',
-		'prose-headings:font-thin prose-h1:text-[length:var(--title-size)] ',
+		'prose-headings:font-thin prose-h1:text-[length:var(--title-size)]',
 		'prose-a:text-violet-400 hover:prose-a:text-violet-300 prose-a:transition-colors',
 		className,
 	]}
