--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,13 +1,27 @@
 @import 'tailwindcss';
 
-:root {
-	font-family: 'Source Serif 4 Variable', serif;
+@theme {
+	--font-serif: 'Source Sans 4 Variable', serif;
 
+	--animate-fade-in: fade-in 0.5s ease-in-out;
+	@keyframes fade-in {
+		from {
+			opacity: 0;
+			transform: scale(0.95);
+		}
+		to {
+			opacity: 1;
+			transform: scale(1);
+		}
+	}
+}
+
+:root {
 	/* See: https://piccalil.li/blog/fluid-typography-with-css-clamp/ */
 	--title-size: clamp(
-		theme(fontSize.4xl),
+		var(--font-size-4xl),
 		calc(1rem + 5vw),
-		theme(fontSize.6xl)
+		var(--font-size-6xl)
 	);
 }
 
