replace tailwind typography plugin styles

--- a/src/components/Prose.astro
+++ b/src/components/Prose.astro
@@ -7,14 +7,6 @@ type Props<Tag extends HTMLTag> = {
 const { as: Component = 'article', class: className } = Astro.props;
 ---
 
-<Component
-	class:list={[
-		'max-w-[65ch]',
-		'prose prose-invert prose-violet prose-xl prose-stone mx-auto',
-		'prose-headings:font-thin prose-h1:text-[length:var(--title-size)]',
-		'prose-a:text-violet-400 hover:prose-a:text-violet-300 prose-a:transition-colors',
-		className,
-	]}
->
+<Component class:list={['prose mx-auto max-w-[65ch]', className]}>
 	<slot />
 </Component>
