--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import { getCollection } from 'astro:content';
 
 import PostList from '~/components/PostList.astro';
 import Prose from '~/components/Prose.astro';
+import StarField from '~/components/StarField.astro';
 import BaseLayout from '~/layouts/BaseLayout.astro';
 
 const posts = (await getCollection('blog'))
@@ -71,4 +72,5 @@ const posts = (await getCollection('blog'))
 			href="/blog">Read more&hellip;</a
 		>
 	</section>
+	<StarField slot="end" />
 </BaseLayout>
