--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,7 +1,8 @@
 ---
+import Headline from '~/components/Headline.astro';
 import BaseLayout from '~/layouts/BaseLayout.astro';
 ---
 
 <BaseLayout>
-	<h1>404 - Page Not Found</h1>
+	<Headline>Not Found</Headline>
 </BaseLayout>
