--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,6 +1,6 @@
 ---
+import Headline from '~/components/Headline.astro';
 import PostList from '~/components/PostList.astro';
-import Prose from '~/components/Prose.astro';
 import BaseLayout from '~/layouts/BaseLayout.astro';
 import { getPosts } from '~/lib/posts';
 
@@ -8,8 +8,6 @@ const posts = await getPosts();
 ---
 
 <BaseLayout aria-labelledby="title">
-	<Prose as="header" class="mt-10 mb-12">
-		<h1 id="title" itemprop="headline">My Writings</h1>
-	</Prose>
+	<Headline class="my-10" id="title">My Writings</Headline>
 	<PostList posts={posts} />
 </BaseLayout>
