--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -27,7 +27,7 @@ const { date, description, head, title } = frontMatterSchema.parse(
 <BaseLayout description={description} itemref="author" title={title}>
 	<Prose
 		as="article"
-		class="bg-black p-10 rounded-md mb-10"
+		class="mb-10 rounded-md bg-black/50 p-10"
 		itemprop="articleBody"
 	>
 		<h1 class="mb-0" id="post-title" itemprop="headline">
