refactor: update background classes for consistency and improve type definitions in Prose component

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -15,7 +15,7 @@ const { background = true, class: className } = Astro.props;
 
 <footer
 	aria-label={`${SITE_TITLE}, ${year}`}
-	class:list={['px-10', background && 'bg-black', className]}
+	class:list={['px-10', background && 'bg-black/90', className]}
 	itemprop="copyrightNotice"
 >
 	<div class="mx-auto flex max-w-screen-2xl gap-4 py-10 font-light">
