--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ const posts = (await getCollection('blog'))
 ---
 
 <BaseLayout>
-	<Prose as="article" class="mt-10" itemprop="about">
+	<Prose class="mt-10" itemprop="about">
 		<h1 itemprop="headline">Howdy, I'm Echo!</h1>
 		<p>
 			This is my website where I put some of my writings and other
