--- a/src/components/Prose.astro
+++ b/src/components/Prose.astro
@@ -1,12 +1,19 @@
 ---
-import type { HTMLTag, Polymorphic } from 'astro/types';
+import type { Polymorphic } from 'astro/types';
 
-type Props<Tag extends HTMLTag> = {
+type Props = {
 	class?: string;
-} & Polymorphic<{ as: Tag }>;
-const { as: Component = 'article', class: className } = Astro.props;
+} & Polymorphic<{ as: 'article' | 'div' | 'footer' | 'header' }>;
+const {
+	as: Component = 'article',
+	class: className,
+	...attributes
+} = Astro.props;
 ---
 
-<Component class:list={['prose mx-auto max-w-[65ch] p-10', className]}>
+<Component
+	{...attributes}
+	class:list={['prose mx-auto max-w-[65ch] p-10', className]}
+>
 	<slot />
 </Component>
