refactor: enhance styling and structure of Audio, Prose, and StarField components; update global styles

--- a/src/components/Audio.astro
+++ b/src/components/Audio.astro
@@ -8,7 +8,7 @@ const { caption, src } = Astro.props;
 ---
 
 <figure>
-	<audio class="w-full" controls src={src}>
+	<audio class="block w-full bg-violet-900/60" controls src={src}>
 		<track
 			default
 			kind="captions"
