--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -8,6 +8,6 @@ const posts = await getPosts();
 ---
 
 <BaseLayout aria-labelledby="title">
-	<Headline class="my-10" id="title">My Writings</Headline>
+	<Headline class="mb-10" id="title">My Writings</Headline>
 	<PostList posts={posts} />
 </BaseLayout>
