refactor: restructure StarField component and enhance styling; improve star rendering logic

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -36,7 +36,7 @@ const hash = coverImage ? await getThumbhash(coverImage) : '';
 		class:list={[
 			'mb-10 rounded-md p-10',
 			coverImage && 'mt-[20vh] bg-black/90',
-			!coverImage && 'bg-black/20',
+			!coverImage && 'bg-black',
 		]}
 		itemprop="articleBody"
 	>
