--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -4,7 +4,7 @@ import type { HTMLAttributes } from 'astro/types';
 import BaseHead from '~/components/BaseHead.astro';
 import Footer from '~/components/Footer.astro';
 import Header from '~/components/Header.astro';
-import StarField from '~/components/StarField.astro';
+import StarField from '~/components/StarField/StarField.astro';
 import { SITE_DESCRIPTION, SITE_TITLE } from '~/consts';
 
 interface Props extends HTMLAttributes<'main'> {
